# CarcrashBigData

./: README.md  accident_data_with_case.json  app.py  data_db.py  pyproject.toml
faiss_db/: index.faiss  index.pkl
team1_data/: accident_data_a.json  crawlingtojson.py  pdf2txt.py  tokenizer.py
team1_data/conversion/: 과실비율_v1.md  과실비율_v2.md  토큰_분석_출력.md
